--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@vimeo/player": "^2.20.1",
     "install": "^0.13.0",
     "modern-normalize": "^1.1.0",
     "npm": "^9.8.0",
