--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@vimeo/player": "^2.20.1",
     "install": "^0.13.0",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "npm": "^9.8.0",
     "simplelightbox": "^2.14.1"
